# zero2prod

./: Cargo.toml  configuration.yaml
.github/workflows/: general.yml
migrations/: 20241126145052_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
