[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12.9"
